// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main suite render sublist when click on 1 Fachinhalte 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      color="tertiary"
      data-id="1-fachinhalte"
      data-test="1-fachinhalte"
    >
      <ion-label
        data-id="1-fachinhalte"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="1-fachinhalte"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item>
      <ion-text
        class="ion-padding-top ion-padding-bottom"
        color="medium"
      >
        Die Lehrperson verfügt über fachwissenschaftliches und fachdidaktisches Wissen, versteht die Inhalte, Strukturen und zentralen Forschungsmethoden ihrer Fachbereiche und sie kann Lernsituationen schaffen, die die fachwissenschaftlichen und fachdidaktischen Aspekte für die Lernenden bedeutsam machen.
      </ion-text>
    </ion-item>
    <ion-list>
      <ion-item
        button="true"
        data-id="1.1 Fachwissen und Didaktik"
        data-test="1.1-fachwissen-und-didaktik"
      >
        <ion-label
          data-id="1.1 Fachwissen und Didaktik"
        >
          1.1 Fachwissen und Didaktik
        </ion-label>
        <ion-icon
          color="medium"
          data-id="1.1 Fachwissen und Didaktik"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z' stroke-miterlimit='10' class='ionicon-fill-none ionicon-stroke-width'/><path stroke-linecap='round' stroke-linejoin='round' d='M352 176L217.6 336 160 272' class='ionicon-fill-none ionicon-stroke-width'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="1.2 Forschungsmethoden"
        data-test="1.2-forschungsmethoden"
      >
        <ion-label
          data-id="1.2 Forschungsmethoden"
        >
          1.2 Forschungsmethoden
        </ion-label>
        <ion-icon
          color="medium"
          data-id="1.2 Forschungsmethoden"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z' stroke-miterlimit='10' class='ionicon-fill-none ionicon-stroke-width'/><path stroke-linecap='round' stroke-linejoin='round' d='M352 176L217.6 336 160 272' class='ionicon-fill-none ionicon-stroke-width'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="1.3 Zusammenhänge erkennen"
        data-test="1.3-zusammenhänge-erkennen"
      >
        <ion-label
          data-id="1.3 Zusammenhänge erkennen"
        >
          1.3 Zusammenhänge erkennen
        </ion-label>
        <ion-icon
          color="medium"
          data-id="1.3 Zusammenhänge erkennen"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z' stroke-miterlimit='10' class='ionicon-fill-none ionicon-stroke-width'/><path stroke-linecap='round' stroke-linejoin='round' d='M352 176L217.6 336 160 272' class='ionicon-fill-none ionicon-stroke-width'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="1.4 Auswahl von Zielen und Inhalten"
        data-test="1.4-auswahl-von-zielen-und-inhalten"
      >
        <ion-label
          data-id="1.4 Auswahl von Zielen und Inhalten"
        >
          1.4 Auswahl von Zielen und Inhalten
        </ion-label>
        <ion-icon
          color="success"
          data-id="1.4 Auswahl von Zielen und Inhalten"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
    </ion-list>
    <ion-item
      button="true"
      data-id="2-entwicklungsprozesse"
      data-test="2-entwicklungsprozesse"
    >
      <ion-label
        color="medium"
        data-id="2-entwicklungsprozesse"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="primary"
        data-id="2-entwicklungsprozesse"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="3-heterogenität-beim-lernen"
      data-test="3-heterogenität-beim-lernen"
    >
      <ion-label
        color="medium"
        data-id="3-heterogenität-beim-lernen"
      >
        3 Heterogenität beim Lernen
      </ion-label>
      <ion-badge
        color="primary"
        data-id="3-heterogenität-beim-lernen"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="4-unterrichtsstrategien"
      data-test="4-unterrichtsstrategien"
    >
      <ion-label
        color="medium"
        data-id="4-unterrichtsstrategien"
      >
        4 Unterrichtsstrategien
      </ion-label>
      <ion-badge
        color="success"
        data-id="4-unterrichtsstrategien"
      >
        4/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="5-motivieren-und-anleiten"
      data-test="5-motivieren-und-anleiten"
    >
      <ion-label
        color="medium"
        data-id="5-motivieren-und-anleiten"
      >
        5 Motivieren und Anleiten
      </ion-label>
      <ion-badge
        color="primary"
        data-id="5-motivieren-und-anleiten"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="6-kommunikation-und-moderation"
      data-test="6-kommunikation-und-moderation"
    >
      <ion-label
        color="medium"
        data-id="6-kommunikation-und-moderation"
      >
        6 Kommunikation und Moderation
      </ion-label>
      <ion-badge
        color="primary"
        data-id="6-kommunikation-und-moderation"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="7-planen-und-evaluieren"
      data-test="7-planen-und-evaluieren"
    >
      <ion-label
        color="medium"
        data-id="7-planen-und-evaluieren"
      >
        7 Planen und Evaluieren
      </ion-label>
      <ion-badge
        color="primary"
        data-id="7-planen-und-evaluieren"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="8-beobachtung-und-förderung"
      data-test="8-beobachtung-und-förderung"
    >
      <ion-label
        color="medium"
        data-id="8-beobachtung-und-förderung"
      >
        8 Beobachtung und Förderung
      </ion-label>
      <ion-badge
        color="primary"
        data-id="8-beobachtung-und-förderung"
      >
        3/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="9-reflexion"
      data-test="9-reflexion"
    >
      <ion-label
        color="medium"
        data-id="9-reflexion"
      >
        9 Reflexion
      </ion-label>
      <ion-badge
        color="primary"
        data-id="9-reflexion"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="10-kooperation-umfeld"
      data-test="10-kooperation-umfeld"
    >
      <ion-label
        color="medium"
        data-id="10-kooperation-umfeld"
      >
        10 Kooperation Umfeld
      </ion-label>
      <ion-badge
        color="primary"
        data-id="10-kooperation-umfeld"
      >
        2/4
      </ion-badge>
    </ion-item>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;

exports[`main suite render sublist when click on 4 Unterrichtsstrategien 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      data-id="1-fachinhalte"
      data-test="1-fachinhalte"
    >
      <ion-label
        color="medium"
        data-id="1-fachinhalte"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="1-fachinhalte"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="2-entwicklungsprozesse"
      data-test="2-entwicklungsprozesse"
    >
      <ion-label
        color="medium"
        data-id="2-entwicklungsprozesse"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="primary"
        data-id="2-entwicklungsprozesse"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="3-heterogenität-beim-lernen"
      data-test="3-heterogenität-beim-lernen"
    >
      <ion-label
        color="medium"
        data-id="3-heterogenität-beim-lernen"
      >
        3 Heterogenität beim Lernen
      </ion-label>
      <ion-badge
        color="primary"
        data-id="3-heterogenität-beim-lernen"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      color="tertiary"
      data-id="4-unterrichtsstrategien"
      data-test="4-unterrichtsstrategien"
    >
      <ion-label
        data-id="4-unterrichtsstrategien"
      >
        4 Unterrichtsstrategien
      </ion-label>
      <ion-badge
        color="success"
        data-id="4-unterrichtsstrategien"
      >
        4/4
      </ion-badge>
    </ion-item>
    <ion-item>
      <ion-text
        class="ion-padding-top ion-padding-bottom"
        color="medium"
      >
        Die Lehrperson versteht und verwendet eine Vielfalt von Unterrichtsstrategien, um bei den Lernenden stufengerechte, instrumentelle Fähigkeiten zu entwickeln und zu fördern.
      </ion-text>
    </ion-item>
    <ion-list>
      <ion-item
        button="true"
        data-id="4.1 Aufträge planen und formulieren"
        data-test="4.1-aufträge-planen-und-formulieren"
      >
        <ion-label
          data-id="4.1 Aufträge planen und formulieren"
        >
          4.1 Aufträge planen und formulieren
        </ion-label>
        <ion-icon
          color="success"
          data-id="4.1 Aufträge planen und formulieren"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="4.2 Methodenvielfalt"
        data-test="4.2-methodenvielfalt"
      >
        <ion-label
          data-id="4.2 Methodenvielfalt"
        >
          4.2 Methodenvielfalt
        </ion-label>
        <ion-icon
          color="success"
          data-id="4.2 Methodenvielfalt"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="4.3 Einsatz von Lernmaterialien"
        data-test="4.3-einsatz-von-lernmaterialien"
      >
        <ion-label
          data-id="4.3 Einsatz von Lernmaterialien"
        >
          4.3 Einsatz von Lernmaterialien
        </ion-label>
        <ion-icon
          color="success"
          data-id="4.3 Einsatz von Lernmaterialien"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
      <ion-item
        button="true"
        data-id="4.4 Instrumentelle Fähigkeiten"
        data-test="4.4-instrumentelle-fähigkeiten"
      >
        <ion-label
          data-id="4.4 Instrumentelle Fähigkeiten"
        >
          4.4 Instrumentelle Fähigkeiten
        </ion-label>
        <ion-icon
          color="success"
          data-id="4.4 Instrumentelle Fähigkeiten"
          icon="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' class='ionicon' viewBox='0 0 512 512'><title>Checkmark Circle</title><path d='M256 48C141.31 48 48 141.31 48 256s93.31 208 208 208 208-93.31 208-208S370.69 48 256 48zm108.25 138.29l-134.4 160a16 16 0 01-12 5.71h-.27a16 16 0 01-11.89-5.3l-57.6-64a16 16 0 1123.78-21.4l45.29 50.32 122.59-145.91a16 16 0 0124.5 20.58z'/></svg>"
          slot="end"
        />
      </ion-item>
    </ion-list>
    <ion-item
      button="true"
      data-id="5-motivieren-und-anleiten"
      data-test="5-motivieren-und-anleiten"
    >
      <ion-label
        color="medium"
        data-id="5-motivieren-und-anleiten"
      >
        5 Motivieren und Anleiten
      </ion-label>
      <ion-badge
        color="primary"
        data-id="5-motivieren-und-anleiten"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="6-kommunikation-und-moderation"
      data-test="6-kommunikation-und-moderation"
    >
      <ion-label
        color="medium"
        data-id="6-kommunikation-und-moderation"
      >
        6 Kommunikation und Moderation
      </ion-label>
      <ion-badge
        color="primary"
        data-id="6-kommunikation-und-moderation"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="7-planen-und-evaluieren"
      data-test="7-planen-und-evaluieren"
    >
      <ion-label
        color="medium"
        data-id="7-planen-und-evaluieren"
      >
        7 Planen und Evaluieren
      </ion-label>
      <ion-badge
        color="primary"
        data-id="7-planen-und-evaluieren"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="8-beobachtung-und-förderung"
      data-test="8-beobachtung-und-förderung"
    >
      <ion-label
        color="medium"
        data-id="8-beobachtung-und-förderung"
      >
        8 Beobachtung und Förderung
      </ion-label>
      <ion-badge
        color="primary"
        data-id="8-beobachtung-und-förderung"
      >
        3/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="9-reflexion"
      data-test="9-reflexion"
    >
      <ion-label
        color="medium"
        data-id="9-reflexion"
      >
        9 Reflexion
      </ion-label>
      <ion-badge
        color="primary"
        data-id="9-reflexion"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="10-kooperation-umfeld"
      data-test="10-kooperation-umfeld"
    >
      <ion-label
        color="medium"
        data-id="10-kooperation-umfeld"
      >
        10 Kooperation Umfeld
      </ion-label>
      <ion-badge
        color="primary"
        data-id="10-kooperation-umfeld"
      >
        2/4
      </ion-badge>
    </ion-item>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;

exports[`main suite renders without crashing 1`] = `
<div>
  <ion-list>
    <ion-item
      button="true"
      data-id="1-fachinhalte"
      data-test="1-fachinhalte"
    >
      <ion-label
        data-id="1-fachinhalte"
      >
        1 Fachinhalte
      </ion-label>
      <ion-badge
        color="primary"
        data-id="1-fachinhalte"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="2-entwicklungsprozesse"
      data-test="2-entwicklungsprozesse"
    >
      <ion-label
        data-id="2-entwicklungsprozesse"
      >
        2 Entwicklungsprozesse
      </ion-label>
      <ion-badge
        color="primary"
        data-id="2-entwicklungsprozesse"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="3-heterogenität-beim-lernen"
      data-test="3-heterogenität-beim-lernen"
    >
      <ion-label
        data-id="3-heterogenität-beim-lernen"
      >
        3 Heterogenität beim Lernen
      </ion-label>
      <ion-badge
        color="primary"
        data-id="3-heterogenität-beim-lernen"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="4-unterrichtsstrategien"
      data-test="4-unterrichtsstrategien"
    >
      <ion-label
        data-id="4-unterrichtsstrategien"
      >
        4 Unterrichtsstrategien
      </ion-label>
      <ion-badge
        color="success"
        data-id="4-unterrichtsstrategien"
      >
        4/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="5-motivieren-und-anleiten"
      data-test="5-motivieren-und-anleiten"
    >
      <ion-label
        data-id="5-motivieren-und-anleiten"
      >
        5 Motivieren und Anleiten
      </ion-label>
      <ion-badge
        color="primary"
        data-id="5-motivieren-und-anleiten"
      >
        3/5
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="6-kommunikation-und-moderation"
      data-test="6-kommunikation-und-moderation"
    >
      <ion-label
        data-id="6-kommunikation-und-moderation"
      >
        6 Kommunikation und Moderation
      </ion-label>
      <ion-badge
        color="primary"
        data-id="6-kommunikation-und-moderation"
      >
        2/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="7-planen-und-evaluieren"
      data-test="7-planen-und-evaluieren"
    >
      <ion-label
        data-id="7-planen-und-evaluieren"
      >
        7 Planen und Evaluieren
      </ion-label>
      <ion-badge
        color="primary"
        data-id="7-planen-und-evaluieren"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="8-beobachtung-und-förderung"
      data-test="8-beobachtung-und-förderung"
    >
      <ion-label
        data-id="8-beobachtung-und-förderung"
      >
        8 Beobachtung und Förderung
      </ion-label>
      <ion-badge
        color="primary"
        data-id="8-beobachtung-und-förderung"
      >
        3/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="9-reflexion"
      data-test="9-reflexion"
    >
      <ion-label
        data-id="9-reflexion"
      >
        9 Reflexion
      </ion-label>
      <ion-badge
        color="primary"
        data-id="9-reflexion"
      >
        1/4
      </ion-badge>
    </ion-item>
    <ion-item
      button="true"
      data-id="10-kooperation-umfeld"
      data-test="10-kooperation-umfeld"
    >
      <ion-label
        data-id="10-kooperation-umfeld"
      >
        10 Kooperation Umfeld
      </ion-label>
      <ion-badge
        color="primary"
        data-id="10-kooperation-umfeld"
      >
        2/4
      </ion-badge>
    </ion-item>
  </ion-list>
  <ion-button
    data-id="Später wählen"
    data-test="choseLater"
  >
    Später wählen
  </ion-button>
</div>
`;
